Merge DataBase Changes (#1)
* exclude integration

* exclude integration

* kubertenes product composite

* spring cloud feign and springboot image:

* spring cloud

* spring cloud commented

* fixed some test

* fixed some test

* fixed some test

* fixed some test

* fixed some test

* fixed some test

* fixed some test

* fixed some test

* product persistance mongo

* product persistance mongo

* Persistence Test and Mapper test

* fix product-composite with database config

* recommendations test

* recommendations test

* fix error on typing mongodb

* database integration

* modificate to use sonar profile

* added profile on yaml and inactive spring banner

* added profile on yaml and inactive spring banner

* added profile on yaml and inactive spring banner

* added profile on yaml and inactive spring banner

* Some unit test for Review services

* modified test to use entity db

* removed jacoco check

* added test for creation, delete and duplicate key

* implementation test for recommendation

* implementation test for reviews

* fixed might be null pointer

* add entity to be covered by sonar

* testing equals and hashcode ProductEntity

* some refactors

* clean it